# django-nginx-presigned

./: .gitignore  AGENTS.md  README.md  pyproject.toml
django_example/: README.md  manage.py
django_example/example_project/: asgi.py  settings.py  urls.py  wsgi.py
django_example/media/: sample.txt
src/nginx_presign/: __init__.py  api.py  apps.py  conf.py  paths.py  urls.py  views.py
tests/: settings.py  test_api.py  test_views.py  urls.py
